[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "econformulas"
version = "0.0.1"
authors = [
    { name = "Ada Li", email = "ajli@smith.edu" },
    { name = "Zoey Ochieng", email = "zochieng@smith.edu" }
]
description = "A package."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
license = "MIT"
license-files = ["LICENSE*"]

[project.urls]
Homepage = "https://github.com/Adajli/econformulas/tree/main"
Issues = "https://github.com/Adajli/econformulas/issues"
